--- a/jdconf2020-h2.yml
+++ b/jdconf2020-h2.yml
@@ -3,6 +3,8 @@ application:
     dumpMessage: the hits are viewable in the logs!
 
 spring:
+  datasource:
+    driverClassName: org.h2.Driver
   data:
     redis:
       repositories:
