expose management endpoints to web

--- a/jdconf2020-redis.yml
+++ b/jdconf2020-redis.yml
@@ -2,8 +2,8 @@ application:
   defaultMessage: this is using redis profile and sessions are enabled!
   dumpMessage: the hits are viewable in the logs!
 
-spring:
-  data:
-    redis:
-      repositories:
-        enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
